# EasyBC

./: CMakeLists.txt  README.md  parameters.txt  parametersMILPDemo.txt  vcpkg.json
benchmarks/BlockCipher/: AES.cl  DES.cl  GIFT_64.cl  KLEIN2.cl  LBlock.cl  MIBS_pbox.cl  MIBS_xor.cl  Piccolo.cl  SIMON32.cl  SIMON48.cl  SKINNY_64tn.cl
benchmarks/NIST/: ASCON.cl  GIFT-COFB.cl  ISAP-KECCAK-p.cl  PHOTON-Beetle.cl  Romulus.cl  SPARKLE.cl  SPARKLE256.cl  TinyJAMBU.cl  Xoodyak.cl
benchmarks/WordWise/: AES.cl
include/branchNum/: BranchNum.h
include/differential/: DiffSBMILP.h  DiffSWMILP.h
include/easybc/analysis/differential/: DiffMILPcons.h  DiffSBMILP.h  DiffSWMILP.h
include/easybc/analysis/sbox/: SboxExtC.h  SyntaxGuided.h
include/easybc/app/: Application.h
include/easybc/core/: ASTNode.h  Globals.h  ProcedureH.h  ThreeAddressNode.h  Value.h  ValueCommon.h
include/easybc/frontend/: Interpreter.h  Transformer.h
include/easybc/handlers/: AnalysisHandler.h  InterpreterHandler.h  SboxHandler.h
include/easybc/interpreter/: semanticInter.h
include/easybc/util/: BranchNum.h  utilities.h
include/interpreter/: semanticInter.h
include/preprocessing/: Interpreter.h  ThreeAddressNode.h  Transformer.h  Value.h  ValueCommon.h
include/sbox/: Check.h  Reduction.h  SboxExtC.h  SboxModel.h  SyntaxGuided.h
include/util/: setup.h
lib/branchNum/: BranchNum.cpp
lib/differential/: DiffMILPcons.cpp  DiffSBMILP.cpp  DiffSWMILP.cpp
lib/interpreter/: semanticInter.cpp
lib/language/: lexer.l  parser.y
lib/preprocessing/: ASTNode.cpp  ProcedureH.cpp  Transformer.cpp  ValueCommon.cpp
lib/sbox/: Check.cpp  Reduction.cpp  SboxModel.cpp
src/: main.cpp
src/analysis/differential/: DiffMILPcons.cpp  DiffSBMILP.cpp  DiffSWMILP.cpp
src/analysis/sbox/: Check.cpp  Reduction.cpp  SboxModel.cpp  superball.cpp  superballMGR.cpp
src/app/: Application.cpp
src/core/: ASTNode.cpp  Globals.cpp  ProcedureH.cpp  ValueCommon.cpp
src/frontend/: Transformer.cpp
src/frontend/language/: lexer.l  parser.y
src/handlers/: AnalysisHandler.cpp  InterpreterHandler.cpp  SboxHandler.cpp
src/interpreter/: semanticInter.cpp
src/util/: BranchNum.cpp  utilities.cpp
